# claude-fleet

./: .env.example  .eslintrc.json  .gitignore  .gitignore.new  .gitmodules  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TEAM-INSTRUCTIONS.md  build.sh  cf  demo.tape  package-lock.json  package.json  pnpm-lock.yaml  run-lead.bat  run-lead.sh  run-worker.bat  run-worker.sh  server.js  start.sh  test-cli.sh  test-workflow.ts  tsconfig.base.json  tsconfig.json  turbo.json  update-templates.ts  vitest.config.ts  vitest.e2e-ui.config.ts
.claude-plugin/: plugin.json
.claude/commands/: audit-loop.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/cli/: package.json
completions/: fleet.bash  fleet.fish  fleet.zsh
config/: ClaudeFleet.terminal  autonomous-ops.example.yaml  install-tmux-theme.sh  tmux-fleet.conf  tmux.conf
crates/compound/: Cargo.toml  package.json
crates/compound/src/: lib.rs
crates/dag/: Cargo.toml  package.json
crates/dag/src/: lib.rs
crates/lmsh/: Cargo.toml  index.d.ts  index.js  package.json
crates/lmsh/src/: lib.rs
crates/logstream/: Cargo.toml  package.json
crates/logstream/src/: lib.rs
crates/metrics/: Cargo.toml  package.json
crates/metrics/src/: lib.rs
crates/ringbus/: Cargo.toml  package.json
crates/ringbus/src/: lib.rs
crates/search/: Cargo.toml  index.d.ts  index.js  package.json
crates/search/src/: lib.rs  tui.rs
crates/swarm/: Cargo.toml  package.json
crates/swarm/src/: lib.rs
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: api-intelligence.ts  api-operations.ts  api.ts  main.ts  modals.ts  router.ts  store.ts  websocket.ts  ws-handlers.ts
docs/: ARCHITECTURE-DIAGRAMS.md  ARCHITECTURE.md  BRAND-STRATEGY.md  DEPLOYMENT.md  FEATURE-FLAGS.md  NATIVE-INTEGRATION.md  README.md  TMUX-AUTOMATION.md  api.md  autonomous-ops.html  demo.html  documentation.html  fibonacci-analysis.md  index.html  metrics.html  openapi.yaml  swarm-planner-demo.html  wave-demo.html
docs/styles/: shared.css
examples/workflows/: code-review.yaml  feature-development.yaml  refactoring.yaml
public/: dashboard.html  index.html
public/compound/: index.html  package.json  tsconfig.json
public/dashboard/: index.html
scripts/: audit-loop.sh  capture-dashboard-gif.js  demo-tmux-fleet-complete.sh  demo-tmux-fleet.sh  demo-tmux-fleet.ts  demo-tmux-server.sh  demo-tmux-waves.sh  demo-wave-orchestrator.ts  e2e-cli.sh  e2e-compound.sh  e2e-crash-recovery.sh  e2e-dashboard.sh  e2e-fleet.sh  e2e-native-endpoints.sh  e2e-native.sh  e2e-phase2-3.sh  e2e-security.sh  e2e-swarm-intelligence.sh  e2e-test.sh  e2e-ui.sh  e2e-websocket.sh  flag-baseline.txt  flag-monitor.sh  fleet-orchestration-demo.sh  generate-fleet-image.js  launch-swarm.sh  migrate-to-claude-fleet.sh  postinstall.js  preflight.sh  swarm-coordinator.sh  test-suite.sh  validate-e2e.sh
src/: cli.test.ts  cli.ts  index.ts  server.test.ts  server.ts  types.ts
src/compound/: compound.test.ts  detect.test.ts  detect.ts  feedback.test.ts  feedback.ts  prompts.test.ts  prompts.ts  runner.ts  types.ts
src/mcp/: server.test.ts  server.ts
src/metrics/: native-metrics.test.ts  native-metrics.ts  prometheus.test.ts  prometheus.ts
src/middleware/: auth.test.ts  auth.ts
src/routes/: audit-scheduler-webhooks.test.ts  audit.test.ts  audit.ts  chats-workitems.test.ts  chats.ts  compound.test.ts  compound.ts  core.test.ts  core.ts  dag.ts  fleet.test.ts  fleet.ts  index.ts  lmsh.ts  mail.test.ts  mail.ts  memory.test.ts  memory.ts  orchestrate-templates-tldr.test.ts  orchestrate.ts  routing.test.ts  routing.ts  scheduler.test.ts  scheduler.ts  search-dag-lmsh.test.ts  search.ts  swarm-intelligence.test.ts  swarm-intelligence.ts  tasks.test.ts  tasks.ts  templates.ts  tldr.ts  types.ts  wave-orchestrate-headless.test.ts  wave-orchestrate-headless.ts  wave-orchestrate-impl.test.ts  wave-orchestrate.test.ts  wave-orchestrate.ts  webhooks.test.ts  webhooks.ts  (+3 more)
src/scheduler/: auto-scheduler.test.ts  auto-scheduler.ts  config-loader.test.ts  config-loader.ts  executor.test.ts  executor.ts  index.ts  notifications.test.ts  notifications.ts  templates.test.ts  templates.ts
src/storage/: agent-memory.test.ts  agent-memory.ts  beliefs.test.ts  beliefs.ts  bidding.test.ts  bidding.ts  blackboard.ts  checkpoint.ts  consensus.test.ts  consensus.ts  credits.test.ts  credits.ts  factory.test.ts  factory.ts  index.ts  interfaces.ts  mail.test.ts  mail.ts  pheromone.test.ts  pheromone.ts  spawn-queue.ts  sqlite.ts  tldr.test.ts  tldr.ts  workflow.test.ts  workflow.ts  workitems.test.ts  workitems.ts
src/types/: claude-fleet-tmux.d.ts
src/validation/: schemas.test.ts  schemas.ts
src/workers/: agent-roles.test.ts  agent-roles.ts  coordination-adapter.test.ts  coordination-adapter.ts  (+24 more)
tests/: fleet-coordination.test.ts  mcp-integration.test.ts  scheduler.test.ts  storage-factory.test.ts  storage.test.ts  tsconfig.json
(+90 files in other folders)
