[package]
name = "cct-compound"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compounding Machine data aggregation and time-series accumulation"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[build-dependencies]
napi-build.workspace = true
