[package]
name = "cct-dag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Task dependency solver with topological sort, cycle detection, and critical path analysis"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true
