[package]
name = "cct-lmsh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Natural language to shell command translator for Claude Code Tools"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[build-dependencies]
napi-build.workspace = true
