[package]
name = "cct-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance metrics aggregation with histograms, sliding windows, and downsampling"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[build-dependencies]
napi-build.workspace = true
