[package]
name = "cct-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Swarm intelligence computation engine: pheromone decay, bid evaluation, vote tallying, ACO routing"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true
